--- a/src/analysis/analysis.ipynb
+++ b/src/analysis/analysis.ipynb
@@ -2,40 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "import re"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-02T22:34:16.283639Z",
-     "end_time": "2023-04-02T22:34:16.328200Z"
+     "end_time": "2023-07-01T10:29:12.991881100Z",
+     "start_time": "2023-07-01T10:29:12.729597400Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "start_time": "2023-04-02T22:34:16.328150Z",
-     "end_time": "2023-04-02T22:34:16.328400Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "vocab_128_path = \"/home/chris/COMP4951-Thesis-Out-of-Vocab-Seed-Mining/src/data/scidocs_data/scidocs_vocab_128.csv\"\n",
-    "vocab_256_path = \"/home/chris/COMP4951-Thesis-Out-of-Vocab-Seed-Mining/src/data/scidocs_data/scidocs_vocab_256.csv\"\n",
-    "vocab_512_path = \"/home/chris/COMP4951-Thesis-Out-of-Vocab-Seed-Mining/src/data/scidocs_data/scidocs_vocab_512.csv\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "def get_seeds():\n",
@@ -59,14 +43,31 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-02T22:34:16.328184Z",
-     "end_time": "2023-04-02T22:34:16.328433Z"
+     "end_time": "2023-07-01T10:29:13.006438200Z",
+     "start_time": "2023-07-01T10:29:12.992880500Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 3,
+   "outputs": [],
+   "source": [
+    "vocab_128_path = \"/home/chris/COMP4951-Thesis-Out-of-Vocab-Seed-Mining/src/data/scidocs_data/scidocs_vocab_128_no_punc_no_nsp.csv\"\n",
+    "vocab_256_path = \"/home/chris/COMP4951-Thesis-Out-of-Vocab-Seed-Mining/src/data/scidocs_data/scidocs_vocab_256_no_punc_no_nsp.csv\"\n",
+    "vocab_512_path = \"/home/chris/COMP4951-Thesis-Out-of-Vocab-Seed-Mining/src/data/scidocs_data/scidocs_vocab_512_no_punc_no_nsp.csv\""
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-01T10:29:13.032999200Z",
+     "start_time": "2023-07-01T10:29:13.006438200Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def check_vocab_seeds(vocabs_df):\n",
@@ -74,7 +75,7 @@
     "    seeds = get_seeds()\n",
     "    final_seeds = []\n",
     "    for seed in seeds:\n",
-    "        final_seeds.extend(seed.split(\" \"))\n",
+    "        final_seeds.extend(re.split('[ ]', seed))\n",
     "    vocab_seed_details = {key: 0 for key in final_seeds}\n",
     "    for vocab in vocabs:\n",
     "        for seed in seeds:\n",
@@ -87,14 +88,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-02T22:34:16.328295Z",
-     "end_time": "2023-04-02T22:34:16.328474Z"
+     "end_time": "2023-07-01T10:29:13.037504Z",
+     "start_time": "2023-07-01T10:29:13.023632400Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "vocab_128_df = pd.read_csv(vocab_128_path)\n",
@@ -104,20 +105,95 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-02T22:34:16.328376Z",
-     "end_time": "2023-04-02T22:34:16.535358Z"
+     "end_time": "2023-07-01T10:29:13.306546500Z",
+     "start_time": "2023-07-01T10:29:13.038504300Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                 vocabs  count\n0                   UNK  22758\n1            randomized  19107\n2               placebo  11626\n3         convolutional  10168\n4          segmentation   9566\n...                 ...    ...\n202341            epuap      1\n202342     thickrestart      1\n202343  spectrumslicing      1\n202344         multicon      1\n202345     multicontact      1\n\n[202346 rows x 2 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>vocabs</th>\n      <th>count</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>UNK</td>\n      <td>22758</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>randomized</td>\n      <td>19107</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>placebo</td>\n      <td>11626</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>convolutional</td>\n      <td>10168</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>segmentation</td>\n      <td>9566</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>202341</th>\n      <td>epuap</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>202342</th>\n      <td>thickrestart</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>202343</th>\n      <td>spectrumslicing</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>202344</th>\n      <td>multicon</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>202345</th>\n      <td>multicontact</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>202346 rows × 2 columns</p>\n</div>"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vocab_128_df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-01T10:29:13.322250300Z",
+     "start_time": "2023-07-01T10:29:13.307741400Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                 vocabs  count\n0                   UNK  27756\n1            randomized  21530\n2               placebo  15802\n3               dataset  15465\n4          segmentation  14151\n...                 ...    ...\n252634       alessandra      1\n252635            voena      1\n252636          wolfers      1\n252637     thickrestart      1\n252638  spectrumslicing      1\n\n[252639 rows x 2 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>vocabs</th>\n      <th>count</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>UNK</td>\n      <td>27756</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>randomized</td>\n      <td>21530</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>placebo</td>\n      <td>15802</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>dataset</td>\n      <td>15465</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>segmentation</td>\n      <td>14151</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>252634</th>\n      <td>alessandra</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>252635</th>\n      <td>voena</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>252636</th>\n      <td>wolfers</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>252637</th>\n      <td>thickrestart</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>252638</th>\n      <td>spectrumslicing</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>252639 rows × 2 columns</p>\n</div>"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vocab_256_df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-01T10:29:13.347949900Z",
+     "start_time": "2023-07-01T10:29:13.323250300Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                 vocabs  count\n0                   UNK  34323\n1            randomized  22284\n2               dataset  19601\n3              datasets  18426\n4               placebo  18116\n...                 ...    ...\n282604            voena      1\n282605          wolfers      1\n282606            igert      1\n282607     thickrestart      1\n282608  spectrumslicing      1\n\n[282609 rows x 2 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>vocabs</th>\n      <th>count</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>UNK</td>\n      <td>34323</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>randomized</td>\n      <td>22284</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>dataset</td>\n      <td>19601</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>datasets</td>\n      <td>18426</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>placebo</td>\n      <td>18116</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>282604</th>\n      <td>voena</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>282605</th>\n      <td>wolfers</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>282606</th>\n      <td>igert</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>282607</th>\n      <td>thickrestart</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>282608</th>\n      <td>spectrumslicing</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n<p>282609 rows × 2 columns</p>\n</div>"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vocab_512_df"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-01T10:29:13.421171200Z",
+     "start_time": "2023-07-01T10:29:13.338444400Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Vocabs in 128 Sentence Length = 7581136\n"
+      "Total Vocabs in 128 Sentence Length = 3570394\n"
      ]
     }
    ],
@@ -127,20 +203,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-02T22:34:16.536786Z",
-     "end_time": "2023-04-02T22:34:16.538901Z"
+     "end_time": "2023-07-01T10:29:13.425171400Z",
+     "start_time": "2023-07-01T10:29:13.354950600Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 10,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Vocabs in 256 Sentence Length = 7637593\n"
+      "Total Vocabs in 256 Sentence Length = 5249012\n"
      ]
     }
    ],
@@ -150,20 +226,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-02T22:34:16.540083Z",
-     "end_time": "2023-04-02T22:34:16.549159Z"
+     "end_time": "2023-07-01T10:29:13.466817100Z",
+     "start_time": "2023-07-01T10:29:13.370780800Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total Vocabs in 512 Sentence Length = 7644128\n"
+      "Total Vocabs in 512 Sentence Length = 6218128\n"
      ]
     }
    ],
@@ -173,14 +249,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-02T22:34:16.549532Z",
-     "end_time": "2023-04-02T22:34:16.570450Z"
+     "end_time": "2023-07-01T10:29:13.470324400Z",
+     "start_time": "2023-07-01T10:29:13.385870600Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -190,7 +266,7 @@
       "Seed = diseases, Occurence: 0\n",
       "Seed = chronic, Occurence: 0\n",
       "Seed = kidney, Occurence: 0\n",
-      "Seed = disease, Occurence: 56\n",
+      "Seed = disease, Occurence: 34\n",
       "Seed = respiratory, Occurence: 0\n",
       "Seed = diabetes, Occurence: 0\n",
       "Seed = mellitus, Occurence: 0\n",
@@ -204,7 +280,7 @@
       "Seed = neoplasms, Occurence: 0\n",
       "Seed = (cancer), Occurence: 0\n",
       "Seed = neurological, Occurence: 0\n",
-      "Seed = hiv, Occurence: 82\n"
+      "Seed = hiv, Occurence: 57\n"
      ]
     }
    ],
@@ -214,14 +290,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-02T22:34:16.607938Z",
-     "end_time": "2023-04-02T22:34:16.659840Z"
+     "end_time": "2023-07-01T10:29:13.508009Z",
+     "start_time": "2023-07-01T10:29:13.407663200Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -231,7 +307,7 @@
       "Seed = diseases, Occurence: 0\n",
       "Seed = chronic, Occurence: 0\n",
       "Seed = kidney, Occurence: 0\n",
-      "Seed = disease, Occurence: 55\n",
+      "Seed = disease, Occurence: 41\n",
       "Seed = respiratory, Occurence: 0\n",
       "Seed = diabetes, Occurence: 0\n",
       "Seed = mellitus, Occurence: 0\n",
@@ -245,7 +321,7 @@
       "Seed = neoplasms, Occurence: 0\n",
       "Seed = (cancer), Occurence: 0\n",
       "Seed = neurological, Occurence: 0\n",
-      "Seed = hiv, Occurence: 82\n"
+      "Seed = hiv, Occurence: 68\n"
      ]
     }
    ],
@@ -255,14 +331,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-02T22:34:16.657963Z",
-     "end_time": "2023-04-02T22:34:16.708137Z"
+     "end_time": "2023-07-01T10:29:13.580338100Z",
+     "start_time": "2023-07-01T10:29:13.461818200Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
@@ -272,7 +348,7 @@
       "Seed = diseases, Occurence: 0\n",
       "Seed = chronic, Occurence: 0\n",
       "Seed = kidney, Occurence: 0\n",
-      "Seed = disease, Occurence: 55\n",
+      "Seed = disease, Occurence: 48\n",
       "Seed = respiratory, Occurence: 0\n",
       "Seed = diabetes, Occurence: 0\n",
       "Seed = mellitus, Occurence: 0\n",
@@ -286,7 +362,7 @@
       "Seed = neoplasms, Occurence: 0\n",
       "Seed = (cancer), Occurence: 0\n",
       "Seed = neurological, Occurence: 0\n",
-      "Seed = hiv, Occurence: 80\n"
+      "Seed = hiv, Occurence: 77\n"
      ]
     }
    ],
@@ -296,8 +372,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-04-02T22:34:16.708012Z",
-     "end_time": "2023-04-02T22:34:16.756581Z"
+     "end_time": "2023-07-01T10:29:13.633512200Z",
+     "start_time": "2023-07-01T10:29:13.541785800Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-07-01T10:29:13.657953400Z",
+     "start_time": "2023-07-01T10:29:13.634513200Z"
     }
    }
   }
